--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art Studio</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/chota@latest">
-    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="https://unpkg.com/chota" integrity="sha384-NbUQ8fi+g8yeAxZcudhLi10TXwxVkDXHGSWTi0tWfj8Y8cXWv3VCztq0Gm2KXfco" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css" integrity="sha384-FFlB1hIOsGcn0tPL1geEefKqnma+njvCOpEeyAuK3vSczL58eEbzMXzKWmbKxl1F" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -42,10 +42,11 @@
 
     <!-- ************************************* SCRIPTS ************************************************** -->
 
-    <script src="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.js"></script>
-    <script src="js/darkmode.js"></script>
-    <script src="js/glider.js"></script>
-    <script src="js/getrandomphoto.js"></script>
+    <script type="text/javascript" src="js/darkMode.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.js" integrity="sha384-V8Uz0G+fJlywusJOFYkueq5mfIRAfETQX2Wa2kwErnrGheHCpyDoBygo8i4tEqgd" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/carousel.js"></script>
+    <script type='text/javascript' src="js/config.js"></script>
+    <script type="text/javascript" src="js/getRandomPhotoSvc.js"></script>
 </body>
 
 </html>
