--- a/frontend/showcase.html
+++ b/frontend/showcase.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>
         Gallery</title>
-        <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css"
-          integrity="sha384-FFlB1hIOsGcn0tPL1geEefKqnma+njvCOpEeyAuK3vSczL58eEbzMXzKWmbKxl1F"
-              crossorigin="anonymous">
+    <link rel="stylesheet" href="css/showcase.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css"
+        integrity="sha384-FFlB1hIOsGcn0tPL1geEefKqnma+njvCOpEeyAuK3vSczL58eEbzMXzKWmbKxl1F" crossorigin="anonymous">
 </head>
+
 <body>
-<!--    <div class="glider-contain">
+    <!--    <div class="glider-contain">
         <div class="glider">
             <div id="carousel-slide1" class="carousel-slide"></div>
             <div id="carousel-slide2" class="carousel-slide"></div>
@@ -26,8 +27,10 @@
 
         <div role="tablist" id="dots"></div>
     </div>-->
-<script src="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.js"
         integrity="sha384-V8Uz0G+fJlywusJOFYkueq5mfIRAfETQX2Wa2kwErnrGheHCpyDoBygo8i4tEqgd"
         crossorigin="anonymous"></script>
+    <script src="js/showcase.js"></script>
 </body>
+
 </html>
